<resources>
    <string name="app_name" translatable="false">Yoush</string>
    <string name="restriction_server_url_description">URL of Jitsi Meet server instance to connect to</string>
    <string name="restriction_server_url_title">Server URL</string>
    <string name="install_url" translatable="false">https://yoush.org/install</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please wait…</string>
    <string name="save">Save</string>
    <string name="note_to_self">Note to Self</string>
    <string name="AbstractNotificationBuilder_new_message">New message</string>
    <string name="AlbumThumbnailView_plus" translatable="false">\+%d</string>
    <string name="ApplicationMigrationActivity__signal_is_updating">Yoush is updating…</string>
    <string name="ApplicationPreferencesActivity_currently_s">Currently: %s</string>
    <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">You haven\'t set a passphrase yet!</string>
    <plurals name="ApplicationPreferencesActivity_messages_per_conversation">
        <item quantity="one">%d message per conversation</item>
        <item quantity="other">%d messages per conversation</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Delete all old messages now?</string>
    <plurals name="ApplicationPreferencesActivity_this_will_immediately_trim_all_conversations_to_the_d_most_recent_messages">
        <item quantity="one">This will immediately trim all conversations to the most recent message.</item>
        <item quantity="other">This will immediately trim all conversations to the %d most recent messages.</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete">Delete</string>
    <string name="ApplicationPreferencesActivity_disable_passphrase">Disable passphrase?</string>
    <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">This will permanently unlock Yoush  and message notifications.</string>
    <string name="ApplicationPreferencesActivity_disable">Disable</string>
    <string name="ApplicationPreferencesActivity_unregistering">Unregistering</string>
    <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Unregistering from Yoush  messages and calls…</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Disable Yoush  messages and calls?</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Disable Yoush  messages and calls by unregistering from the server. You will need to re-register your phone number to use them again in the future.</string>
    <string name="ApplicationPreferencesActivity_error_connecting_to_server">Error connecting to server!</string>
    <string name="ApplicationPreferencesActivity_sms_enabled">SMS Enabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_change_your_default_sms_app">Touch to change your default SMS app</string>
    <string name="ApplicationPreferencesActivity_sms_disabled">SMS Disabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_make_signal_your_default_sms_app">Touch to make Yoush  your default SMS app</string>
    <string name="ApplicationPreferencesActivity_on">on</string>
    <string name="ApplicationPreferencesActivity_On">On</string>
    <string name="ApplicationPreferencesActivity_off">off</string>
    <string name="ApplicationPreferencesActivity_Off">Off</string>
    <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
    <string name="ApplicationPreferencesActivity_privacy_summary">Screen lock %1$s, Registration lock %2$s</string>
    <string name="ApplicationPreferencesActivity_privacy_summary_screen_lock">Screen lock %1$s</string>
    <string name="ApplicationPreferencesActivity_appearance_summary">Theme %1$s, Language %2$s</string>
    <string name="ApplicationPreferencesActivity_pins_are_required_for_registration_lock">PINs are required for registration lock. To disable PINs, please first disable registration lock.</string>
    <string name="ApplicationPreferencesActivity_failed_to_disable_pins_try_again_later">Failed to disable PINs. Try again later.</string>
    <string name="ApplicationPreferencesActivity_pin_created">Pin created.</string>
    <string name="ApplicationPreferencesActivity_pin_disabled">Pin disabled.</string>
    <plurals name="AppProtectionPreferenceFragment_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="DraftDatabase_Draft_image_snippet">(image)</string>
    <string name="DraftDatabase_Draft_audio_snippet">(audio)</string>
    <string name="DraftDatabase_Draft_video_snippet">(video)</string>
    <string name="DraftDatabase_Draft_location_snippet">(location)</string>
    <string name="DraftDatabase_Draft_quote_snippet">(reply)</string>
    <string name="AttachmentKeyboard_gallery">Gallery</string>
    <string name="AttachmentKeyboard_gif">GIF</string>
    <string name="AttachmentKeyboard_file">File</string>
    <string name="AttachmentKeyboard_contact">Contact</string>
    <string name="AttachmentKeyboard_location">Location</string>
    <string name="AttachmentKeyboard_Signal_needs_permission_to_show_your_photos_and_videos">Yoush  needs permission to show your photos and videos.</string>
    <string name="AttachmentKeyboard_give_access">Give Access</string>
    <string name="AttachmentManager_cant_open_media_selection">Can\'t find an app to select media.</string>
    <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Yoush  requires the Storage permission in order to attach photos, videos, or audio, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Storage\".</string>
    <string name="AttachmentManager_signal_requires_contacts_permission_in_order_to_attach_contact_information">Yoush  requires Contacts permission in order to attach contact information, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Contacts\".</string>
    <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Yoush  requires Location permission in order to attach a location, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Location\".</string>
    <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Yoush  requires the Camera permission in order to take photos, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Camera\".</string>
    <string name="AttachmentUploadJob_uploading_media">Uploading media…</string>
    <string name="AttachmentUploadJob_compressing_video_start">Compressing video…</string>
    <string name="AudioSlidePlayer_error_playing_audio">Error playing audio!</string>
    <string name="BlockedContactsActivity_blocked_contacts">Blocked</string>
    <string name="BlockUnblockDialog_block_and_leave_s">Block and leave %1$s?</string>
    <string name="BlockUnblockDialog_block_s">Block %1$s?</string>
    <string name="BlockUnblockDialog_you_will_no_longer_receive_messages_or_updates">You will no longer receive messages or updates from this group, and members won\'t be able to add you to this group again.</string>
    <string name="BlockUnblockDialog_group_members_wont_be_able_to_add_you">Group members won\'t be able to add you to this group again.</string>
    <string name="BlockUnblockDialog_group_members_will_be_able_to_add_you">Group members will be able to add you to this group again.</string>
    <string name="BlockUnblockDialog_you_will_be_able_to_call_and_message_each_other">You will be able to message and call each other and your name and photo will be shared with them.</string>
    <string name="BlockUnblockDialog_blocked_people_wont_be_able_to_call_you_or_send_you_messages">Blocked users could not call you or send you messages.</string>
    <string name="BlockUnblockDialog_unblock_s">Unblock %1$s?</string>
    <string name="BlockUnblockDialog_unblock">Unblock</string>
    <string name="BlockUnblockDialog_block">Block</string>
    <string name="BlockUnblockDialog_block_and_leave">Block and Leave</string>
    <string name="BlockUnblockDialog_block_and_delete">Block and Delete</string>
    <string name="BucketedThreadMedia_Today">Today</string>
    <string name="BucketedThreadMedia_Yesterday">Yesterday</string>
    <string name="BucketedThreadMedia_This_week">This week</string>
    <string name="BucketedThreadMedia_This_month">This month</string>
    <string name="BucketedThreadMedia_Large">Large</string>
    <string name="BucketedThreadMedia_Medium">Medium</string>
    <string name="BucketedThreadMedia_Small">Small</string>
    <string name="CallScreen_Incoming_call">Incoming call</string>
    <string name="CameraActivity_image_save_failure">Failed to save image.</string>
    <string name="CameraXFragment_tap_for_photo_hold_for_video">Yoush for photo, hold for video</string>
    <string name="CameraXFragment_capture_description">Capture</string>
    <string name="CameraXFragment_change_camera_description">Change camera</string>
    <string name="CameraXFragment_open_gallery_description">Open gallery</string>
    <string name="CameraContacts_recent_contacts">Recent contacts</string>
    <string name="CameraContacts_signal_contacts">Yoush  contacts</string>
    <string name="CameraContacts_signal_groups">Yoush  groups</string>
    <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">You can share with a maximum of %d conversations.</string>
    <string name="CameraContacts_select_signal_recipients">Select Yoush  recipients</string>
    <string name="CameraContacts_no_signal_contacts">No Yoush  contacts</string>
    <string name="CameraContacts_you_can_only_use_the_camera_button">You can only use the camera button to send photos to Yoush  contacts. </string>
    <string name="CameraContacts_cant_find_who_youre_looking_for">Can\'t find who you\'re looking for?</string>
    <string name="CameraContacts_invite_a_contact_to_join_signal">Invite a contact to join Yoush </string>
    <string name="CameraContacts__menu_search">Search</string>
    <string name="ClearProfileActivity_remove">Remove</string>
    <string name="SearchFragment_no_results">No results found for \'%s\'</string>
    <string name="SearchToolbar_search_for_conversations_contacts_and_messages">Search</string>
    <string name="sologan_home">Life is secure !\n Keep your message private.</string>
    <string name="term_privacy_policy">Terms and Privacy</string>
    <string name="enter_code_next_btn">Next</string>
    <string name="pin_edit_title">Edit pin messages</string>
    <string name="pin_edit_description"><![CDATA[Drag & drop to reorder pin messages. After unpin, the original messages still appears in this group]]></string>
    <string name="btn_close">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="mask_as_unread">Unread</string>
    <string name="archive">Archive</string>
    <string name="hide">Hide</string>
    <string name="conversation_wallpaper">Conversation wallpapers</string>
    <string name="change_alias_name">Change alias name</string>
    <string name="change_alias_name_hint">Choose a memorable name for %s. This alias will only be shown to you.</string>
    <string name="background_template_title">Yoush templates</string>
    <string name="background_template_gallery">Choose from photos</string>
</resources>