<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Fragment.Content"
    tools:ignore="HardcodedText | MissingConstraints">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewAppBar"
        style="@style/AppBar.Title"
        android:text="@string/change_alias_name"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/viewBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/viewBack"
        style="@style/AppBar.Button"
        android:layout_width="?attr/actionBarSize"
        android:src="@drawable/ic_arrow_left_conversation_24"
        android:tint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewHint"
        style="@style/Signal.Text.Caption.MessageSent"
        android:layout_width="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/change_alias_name_hint"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewBack" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextName"
        style="@style/EditText.Search"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:maxLength="256"
        android:textColor="@color/black"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHint"
        tools:hint="Name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/viewClose"
        style="@style/Button.Primary"
        android:layout_width="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#444348"
        android:text="@string/btn_close"
        app:layout_constraintEnd_toStartOf="@+id/viewSave"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/viewSave"
        style="@style/Button.Primary"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btn_save"
        app:layout_constraintBaseline_toBaselineOf="@+id/viewClose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewClose" />

</androidx.constraintlayout.widget.ConstraintLayout>
