<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:importantForAccessibility="no"
        android:src="@drawable/background_home"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/Signal.Text.Headline.Registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:textColor="#DFA952"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/sologan_home"
        app:layout_constraintBottom_toTopOf="@+id/welcome_terms_button"
        app:layout_constraintEnd_toEndOf="@+id/welcome_continue_button"
        app:layout_constraintStart_toStartOf="@+id/welcome_continue_button" />

    <TextView
        android:id="@+id/welcome_terms_button"
        style="@style/Signal.Text.Body.Registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/term_privacy_policy"
        android:textColor="#DFA952"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/welcome_continue_button"
        app:layout_constraintEnd_toEndOf="@+id/welcome_continue_button"
        app:layout_constraintStart_toStartOf="@+id/welcome_continue_button" />

    <com.dd.CircularProgressButton
        android:id="@+id/welcome_continue_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="48dp"
        android:textColor="#fff"
        app:cpb_colorProgress="#DFA952"
        app:cpb_cornerRadius="40dp"
        app:cpb_textIdle="@string/enter_code_next_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        app:cpb_selectorIdle="@drawable/progress_button_blue_light"/>
</androidx.constraintlayout.widget.ConstraintLayout>