<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conversationPinLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="HardcodedText">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="68dp"
        android:layout_height="0dp"
        android:background="@drawable/circle_white"
        android:backgroundTint="#FCD625"
        android:padding="24dp"
        android:tint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06"
        app:srcCompat="@drawable/ic_pin" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/conversationPinTitleEdit"
        style="@style/Signal.Text.Body"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/pin_edit_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/conversationPinMessageEdit"
        style="@style/Signal.Text.Caption.MessageSent"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/pin_edit_description"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conversationPinTitleEdit"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/conversationPinRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:nestedScrollingEnabled="false"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        android:overScrollMode="never"
        app:layout_constraintTop_toBottomOf="@+id/conversationPinMessageEdit"
        tools:itemCount="4"
        tools:listitem="@layout/conversation_activity_pin_item_editable" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/viewClose"
        style="@style/Button.Primary"
        android:layout_width="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#444348"
        android:text="@string/btn_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewSave"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/viewSave"
        style="@style/Button.Primary"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btn_save"
        android:enabled="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/viewClose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewClose" />

    <View
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginBottom="32dp"
        android:background="#A5A5A5"
        app:layout_constraintBottom_toTopOf="@+id/viewClose"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>